Opened 11 years ago
Closed 11 years ago
#10902 closed bug (fixed)
Terminal crashes on setting window size.
Reported by: | arfonzo | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Terminal | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Steps to reproduce:
- Open Terminal.
- Add a new Tab.
- Window size > 80x25.
- Terminal crashes.
I am on hrev47310. I've asked for others to confirm, and jessicah and diver both confirm the same behaviour on their end.
<jessicah> View requires owner and doesn't have one
Attachments (1)
Change History (3)
by , 11 years ago
Attachment: | Terminal-21387-debug-05-06-2014-08-14-44.report added |
---|
comment:1 by , 11 years ago
Note:
See TracTickets
for help on using tickets.
I can confirm that this bug occurs in hrev47307